--- a/packages/kakao_flutter_sdk_auth/pubspec.yaml
+++ b/packages/kakao_flutter_sdk_auth/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
   platform: ^3.0.0
   crypto: ^3.0.1
   kakao_flutter_sdk_common:
-    path: ../kakao_flutter_sdk_common
+    git:
+      url: https://github.com/momoboard/kakao_flutter_sdk.git
+      ref: momo
+      path: packages/kakao_flutter_sdk_common
 
 dev_dependencies:
   flutter_test:
