--- a/packages/kakao_flutter_sdk_talk/pubspec.yaml
+++ b/packages/kakao_flutter_sdk_talk/pubspec.yaml
@@ -19,10 +19,15 @@ dependencies:
   json_annotation: ^4.1.0
   dio: ^4.0.0
   kakao_flutter_sdk_user:
-    path: ../kakao_flutter_sdk_user
+    git:
+      url: https://github.com/momoboard/kakao_flutter_sdk.git
+      ref: momo
+      path: packages/kakao_flutter_sdk_user
   kakao_flutter_sdk_template:
-    path: ../kakao_flutter_sdk_template
-
+    git:
+      url: https://github.com/momoboard/kakao_flutter_sdk.git
+      ref: momo
+      path: packages/kakao_flutter_sdk_template
 
 dev_dependencies:
   flutter_test:
