--- a/packages/kakao_flutter_sdk_user/pubspec.yaml
+++ b/packages/kakao_flutter_sdk_user/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
   json_annotation: ^4.1.0
   dio: ^4.0.0
   kakao_flutter_sdk_auth:
-    path: ../kakao_flutter_sdk_auth
+    git:
+      url: https://github.com/momoboard/kakao_flutter_sdk.git
+      ref: momo
+      path: packages/kakao_flutter_sdk_auth
 
 dev_dependencies:
   flutter_test:
